kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a-service
  namespace: practice-helm
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: a-service
