kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: a-service
  namespace: practice-helm
spec:
  rules:
    - host: practice-helm.demo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: a-service
                port:
                  number: 8080
